Add audio data byte offset and metadata to Document in AbstractAudioSplitter